    format setting view
  * Adds API for accessing the progress indicator of the page from
    DcpWidget
  * Removes the deprecated classes DcpButton* and DcpBriefWidget
  * 'Applications' category is sorted by applet titles instead of the Order
    specified in the desktop file (like other categories)
  * Fixes: NB#169944 - Recently Used list in DCP is sorted improperly

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 02 Jun 2010 17:36:26 +0200

duicontrolpanel (0.7.20) unstable; urgency=low

  * changelog
  * Workaround for NB#170026 - Emitting valuesChanged signal doesnt update
    valueText displayed in Brief (temporary workaround for NB#170105 -
    showhideEvent of MContentItem does not get called)

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 25 May 2010 10:04:05 +0200

duicontrolpanel (0.7.19-1) unstable; urgency=low

  * Fixes endless recursion when there is no dbus available
  * Fixes: NB#166112 - DuiControlPanel should apply to swap itself to
    be the toplevel window when DuiControlPanelIf::appletPage
  * Fixes: NB#165815 - Duicontrolpanel calls title function for an
    applet wrongly
  * Fixes: NB#143519 - localization of duicontrolpanel is very outdated
    (Translation catalog name and dependency)
  * Fixes: NB#169767 - Synchronization application is not available in
    system settings
  * Fixes: an applet can not request pages if started through servicefw

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 20 May 2010 16:20:05 +0200

duicontrolpanel (0.7.18) unstable; urgency=low

  * unittest fixes

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 07 May 2010 10:16:34 +0200

duicontrolpanel (0.7.17) unstable; urgency=low

  [ Robert Manner ]
  * Fixes servicefw api regression
  * Deprecated classes: DcpButton*, DcpBriefWidget. MContentItem and
    MContentItem based DcpContentItem replaces them
  * Fixes: false return at DcpWidget::back() was not taken into account (the
    page got destroyed either ways)