@@ -45,7 +45,6 @@ public:
 //        ACCOUNTSANDAPPLICATIONS,
         DEVICESYSTEM,
         UTILITIES,
-        ServiceAccounts,
         Applications,
         CATEGORY_PAGEID_END,    // ---
         APPLET,
